WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268836
[ wk2 Debug ] loader/stateobjects/pushstate-size-iframe.html is very slow, usually times out
https://bugs.webkit.org/show_bug.cgi?id=268836
Summary
[ wk2 Debug ] loader/stateobjects/pushstate-size-iframe.html is very slow, us...
Jay Stfleur
Reported
2024-02-06 10:23:37 PST
[ Monterey+ wk2 Debug ] loader/stateobjects/pushstate-size-iframe.html is a constant time out. Description: loader/stateobjects/pushstate-size-iframe.html Is a constant time out on Monterey and up History:
https://results.webkit.org/?suite=layout-tests&test=loader%2Fstateobjects%2Fpushstate-size-iframe.html
Diff/Image Diff/Crash Log:
https://build.webkit.org/results/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/274143@main%20(1545)/loader/stateobjects/pushstate-size-iframe-pretty-diff.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-06 10:24:08 PST
<
rdar://problem/122401579
>
Jay Stfleur
Comment 2
2024-02-06 10:25:40 PST
Reproducibility: Not able to reproduce.
Jay Stfleur
Comment 3
2024-02-06 10:50:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23937
EWS
Comment 4
2024-02-06 15:16:08 PST
Test gardening commit
274174@main
(07c238bb1de8): <
https://commits.webkit.org/274174@main
> Reviewed commits have been landed. Closing PR #23937 and removing active labels.
Alexey Proskuryakov
Comment 5
2024-02-08 13:12:02 PST
I think that this is a very slow test that got even slower recently.
Chris Dumez
Comment 6
2024-02-27 20:18:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25212
EWS
Comment 7
2024-02-28 09:29:25 PST
Committed
275452@main
(4e8b5c1a05ae): <
https://commits.webkit.org/275452@main
> Reviewed commits have been landed. Closing PR #25212 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug