[ wk2 Debug ] loader/stateobjects/pushstate-size-iframe.html is very slow, usually times out https://bugs.webkit.org/show_bug.cgi?id=268836 rdar://122401579

Reviewed by Ryosuke Niwa.

This test was slow, especially in debug because it had to reach the 64MB size limit by doing
repeated history.pushState() calls. This would obviously take a while. To address the issue,
I am introducing a new window.internals API to override this limit. In the test, we now
lower this limit to 4MB, which makes the test run a lot faster.

* LayoutTests/loader/stateobjects/pushstate-size-iframe-expected.txt:
* LayoutTests/loader/stateobjects/pushstate-size-iframe.html:
* LayoutTests/loader/stateobjects/resources/pushstate-iframe.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/page/History.cpp:
(WebCore::History::totalStateObjectPayloadLimit const):
(WebCore::History::stateObjectAdded):
* Source/WebCore/page/History.h:
* Source/WebCore/page/LocalDOMWindow.h:
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):
(WebCore::Internals::setHistoryTotalStateObjectPayloadLimitOverride):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/275452@main